--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.1.0
 asgiref==3.5.0
 async-timeout==4.0.2
+attrs==21.4.0
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 celery==5.2.3
@@ -24,6 +25,7 @@ django-anymail==8.5
 django-cors-headers==3.11.0
 django-countries==7.3.1
 django-environ==0.8.1
+django-filter==21.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
@@ -36,6 +38,7 @@ psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.7
+pyrsistent==0.18.1
 python3-openid==3.2.0
 pytz==2021.3
 redis==4.2.1
