--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ click-plugins==1.1.1
 click-repl==0.2.0
 cloudinary==1.29.0
 colorama==0.4.4
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==36.0.1
 defusedxml==0.7.1
 Deprecated==1.2.13
@@ -29,8 +31,12 @@ django-filter==21.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
+itypes==1.2.0
+Jinja2==3.1.2
 kombu==5.2.4
+MarkupSafe==2.1.1
 oauthlib==3.2.0
+openapi-codec==1.3.2
 packaging==21.3
 Pillow==9.0.1
 prompt-toolkit==3.0.28
@@ -41,13 +47,16 @@ pyparsing==3.0.7
 pyrsistent==0.18.1
 python3-openid==3.2.0
 pytz==2021.3
+PyYAML==6.0
 redis==4.2.1
 requests==2.27.1
 requests-oauthlib==1.3.1
+simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
 typing_extensions==4.1.1
 tzdata==2021.5
+uritemplate==4.1.1
 urllib3==1.26.8
 vine==5.0.0
 wcwidth==0.2.5
