Fixing Typescript errors

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
+    "lint": "tsc",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "force_build": "vite build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
