--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "chart.js": "^3.6.0",
+    "dotenv": "^16.0.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^3.3.0",
     "react-cookies": "^0.1.1",
