--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+alldata.json.gz
 mydata.json.gz
 
 /env
@@ -10,7 +11,7 @@ __pycache__/
 /*.pyc
 db.sqlite3
 /media
-/static
+# /static
 /staticfiles
 .env
 envvars.txt
